# candlesticks

./: .gitignore  pyproject.toml
candlesticks/: __init__.py  binance_api.py  brownian.py
data_generator/: binance_export.py
tests/: test_candlesticks.py
